# solution-architect-agents

./: .env.example  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SPEC.md  main.py  pyproject.toml  requirements.txt
.github/workflows/: test.yml
examples/: sample_input.md
examples/sample_output/: architecture.mmd  business_brief.md  decisions.md  options_considered.md  review_notes.md  risks.md  solution_design.md
src/: graph.py  llm.py  state.py
src/agents/: architect.py  business_analyst.py  doc_reviewer.py  doc_writer.py  editor.py  human_review.py  refiner.py  requirements_clarifier.py  risk_reviewer.py  solutioning.py
src/prompts/: architect.md  business_analyst.md  doc_reviewer.md  doc_writer.md  editor.md  refiner.md  requirements_clarifier.md  risk_reviewer.md  solutioning.md
src/utils/: output_writer.py  prompt_loader.py
tests/: test_smoke.py
web/: runner.py  server.py
web/routes/: runs.py
web/static/: app.js  index.html  style.css
